# Doncey-Kong-Jr

./: CMakeLists.txt  README.md  main.c
entities/enemies/: BlueCrocodile.c
entities/players/: Monkey.c
src/: Util.c  Util.h
src/Util/: Collisions.c  Collisions.h  GlobalVariables.h
src/client/: Cliente.c  Cliente.h
src/entities/: Controller.c  Controller.h  Crocodile.c  Crocodile.h  Donkey.h  Fruit.c  Fruit.h  Ledge.c  Ledge.h  Monkey.c  Monkey.h  Rope.c  Rope.h
src/entities/enemies/: BlueCrocodile.c  BlueCrocodile.h
src/entities/players/: Monkey.c  Monkey.h
src/game/: Controller.c  Controller.h  Game.c  Game.h  status.c  status.h
src/graphics/: Loader.c  Loader.h  Menu.c  Menu.h
src/structures/: LinkedList.c  LinkedList.h  Node.c  Node.h
